my homepage first commit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Hailongding.GitHub.io</h1>
-      <h2 class="project-tagline">Ding Hailong&#39;s homepage</h2>
+      <h2 class="project-tagline">Hailong&#39;s homepage</h2>
     </section>
 
     <section class="main-content">
