--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </a>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+<p>I am a software engineer with around 12 years of working experience. I got my master’s degree after several years of working in 2007 from Southeast University in China. Till this time of the day, I’ve worked for the same group company in 3 subordinate enterprises, the last one is a startup campany. I’m famaliar with most mainstream RDBMS, and commonly used network communication protocols. I have experience in cross platform programming. I use C++ to develop applications. I’m good at software architecture design and performance optimization.</p>
 
 <h2 id="contact">Contact</h2>
 
