--- a/cv/index.html
+++ b/cv/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Ding Hailong :: CV</title>
-    <meta name="description" content="Ding Hailong's homepage">
+    <title>Hailong Ding :: CV</title>
+    <meta name="description" content="Hailong's homepage">
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="canonical" href="http://hailongding.github.io/cv/">
-    <link rel="alternate" type="application/rss+xml" title="Ding Hailong" href="http://hailongding.github.io/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Hailong Ding" href="http://hailongding.github.io/feed.xml" />
 
     <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 </head>
@@ -20,7 +20,7 @@
   <body>
   <div class="page">
     <header class="site-header">
-    <a class="site-title" href="/">Ding Hailong</a>
+    <a class="site-title" href="/">Hailong Ding</a>
     <nav class="site-nav">
         <a href="#" class="menu-icon menu.open">
             <svg viewBox="0 0 18 15">
@@ -54,16 +54,16 @@
         <h1>CV</h1>
     </header>
 
-    <p>Download <a href="http://nitens.org/img/cvtex/cv_template_xetex_caslon.pdf">PDF version</a>. The PDF should be embedded underneath – uses Google Docs for embedding and works if the PDF is on dropbox. Works sporadically if PDF is elsewhere too.</p>
+    <p>Download <a href="http://">PDF version</a>. The PDF should be embedded underneath – uses Google Docs for embedding and works if the PDF is on dropbox. Works sporadically if PDF is elsewhere too.</p>
 
-<iframe src="http://docs.google.com/viewer?url=http://nitens.org/img/cvtex/cv_template_xetex_caslon.pdf&amp;hl=en_US&amp;embedded=true" style="width:100%; height:800px; border:0;" scrolling="no"></iframe>
+<iframe src="http://docs.google.com/viewer?url=&amp;hl=en_US&amp;embedded=true" style="width:100%; height:800px; border:0;" scrolling="no"></iframe>
 
 
 </div>
 
 
     <footer class="site-footer">
-    Ding Hailong's homepage<br />
+    Hailong's homepage<br />
 
     Using <a href="http://jekyllrb.com/">Jekyll</a>
     
