--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Ding Hailong :: About</title>
-    <meta name="description" content="Ding Hailong's homepage">
+    <title>Hailong Ding :: About</title>
+    <meta name="description" content="Hailong's homepage">
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="canonical" href="http://hailongding.github.io/">
-    <link rel="alternate" type="application/rss+xml" title="Ding Hailong" href="http://hailongding.github.io/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Hailong Ding" href="http://hailongding.github.io/feed.xml" />
 
     <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 </head>
@@ -20,7 +20,7 @@
   <body>
   <div class="page">
     <header class="site-header">
-    <a class="site-title" href="/">Ding Hailong</a>
+    <a class="site-title" href="/">Hailong Ding</a>
     <nav class="site-nav">
         <a href="#" class="menu-icon menu.open">
             <svg viewBox="0 0 18 15">
@@ -61,11 +61,11 @@
     </a>
 </div>
 
-<p>I am a software engineer with around 12 years of working experience. I got my master’s degree after several years of working in 2007 from Southeast University in China. Till this time of the day, I’ve worked for the same group company in 2 subordinate enterprises, the latter is a startup campany. I’m famaliar with most mainstream RDBMS, and commonly used network communication protocols. I have experience in cross platform programming. I use C++ to develop applications. I’m good at software architecture design and performance optimization.</p>
+<p>I am a software engineer with around 12 years of working experience. I got my master’s degree after several years of working in 2007 from Southeast University in China. Till this time of the day, I’ve worked for the same group company in 2 subordinate enterprises, the latter is a startup campany. I’m famaliar with most mainstream RDBMS, commonly used network communication protocols, and embedded systems development. I have experience in cross platform programming. I use C++ to develop applications. I’m good at software architecture design and performance optimization.</p>
 
 <h2 id="contact">Contact</h2>
 
-<p>Ding Hailong <br /></p>
+<p>Hailong Ding<br /></p>
 
 <p>Email: <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#105;&#110;&#103;&#104;&#097;&#105;&#108;&#111;&#110;&#103;&#064;&#102;&#097;&#115;&#116;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#100;&#105;&#110;&#103;&#104;&#097;&#105;&#108;&#111;&#110;&#103;&#064;&#102;&#097;&#115;&#116;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a></p>
 
@@ -74,7 +74,7 @@
 
 
     <footer class="site-footer">
-    Ding Hailong's homepage<br />
+    Hailong's homepage<br />
 
     Using <a href="http://jekyllrb.com/">Jekyll</a>
     
