--- a/research/index.html
+++ b/research/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Ding Hailong :: Research</title>
-    <meta name="description" content="Ding Hailong's homepage">
+    <title>Hailong Ding :: Research</title>
+    <meta name="description" content="Hailong's homepage">
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="canonical" href="http://hailongding.github.io/research/">
-    <link rel="alternate" type="application/rss+xml" title="Ding Hailong" href="http://hailongding.github.io/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Hailong Ding" href="http://hailongding.github.io/feed.xml" />
 
     <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 </head>
@@ -20,7 +20,7 @@
   <body>
   <div class="page">
     <header class="site-header">
-    <a class="site-title" href="/">Ding Hailong</a>
+    <a class="site-title" href="/">Hailong Ding</a>
     <nav class="site-nav">
         <a href="#" class="menu-icon menu.open">
             <svg viewBox="0 0 18 15">
@@ -131,7 +131,7 @@ M. McFly, D. Kirk, L. Skywalker, H.J. Potter, I. Jones, H. Houdini<br />
 
 
     <footer class="site-footer">
-    Ding Hailong's homepage<br />
+    Hailong's homepage<br />
 
     Using <a href="http://jekyllrb.com/">Jekyll</a>
     
