--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </a>
 </div>
 
-<p>I am a software engineer with around 12 years of working experience. I got my master’s degree after several years of working in 2007 from Southeast University in China. Till this time of the day, I’ve worked for the same group company in 2 subordinate enterprises, the latter is a startup campany. I’m famaliar with most mainstream RDBMS, commonly used network communication protocols, and embedded systems development. I have experience in cross platform programming. I use C++ to develop applications. I’m good at software architecture design and performance optimization.</p>
+<p>I am a software engineer with around 12 years of working experience. I got my master’s degree after several years of working in 2007 from Southeast University in China. Till this time of the day, I’ve worked for the same group company in 2 subordinate enterprises, the latter is a startup campany. I’m famaliar with most mainstream RDBMS, commonly used network communication protocols, and embedded systems development. I have experience in cross platform programming. I use C/C++ to develop applications. I’m good at software architecture design and performance optimization.</p>
 
 <h2 id="contact">Contact</h2>
 
