changed my photo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     </a>
 </div>
 
-<p>I am a software engineer with around 12 years of working experience. I got my master’s degree after several years of working in 2007 from Southeast University in China. Till this time of the day, I’ve worked for the same group company in 2 subordinate enterprises, the latter is a startup campany. I’m famaliar with most mainstream RDBMS, commonly used network communication protocols, and embedded systems development. I have experience in cross platform programming. I use C/C++ to develop applications. I’m good at software architecture design and performance optimization.</p>
+<p>I am a software engineer with 12 years of working experience, of which 9 years engaged in embedded software development. I graduated from Southeast Universtiy with a Master’s degree of Computer Scicence in 2007. Since then, I have been working for two subordinate enterprises in the same group campany. The latter is a start-up company.</p>
+
+<p>I am familiar with many aspects of embedded system development, including boot load, Linux kernel, device driver, file system, embedded database, network communication, and performance optimization.
+I also have experience with cross-platform programming. I was responsible for the software development of several devices. I have rich experience in the software requirements analysis, summary, and detailed design.</p>
 
 <h2 id="contact">Contact</h2>
 
