--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <p>I am a software engineer with 12 years of working experience, of which 9 years engaged in embedded software development. I graduated from Southeast University with a Master’s degree of Computer Science in 2007. Since then, I have been working for two subordinate enterprises in the same group company. The latter is a start-up company.</p>
 
-<p>I am familiar with many aspects of embedded system development, including boot load, Linux kernel, device driver, file system, embedded database, network communication, and performance optimization. I also have experience with cross-platform programming. I was responsible for the software development of several devices. I have rich experience in the software requirements analysis, summary, and detailed design.</p>
+<p>I am familiar with many aspects of embedded system development, including boot loader, Linux kernel, device driver, file system, embedded database, network communication, and performance optimization. I also have experience with cross-platform programming. I was responsible for the software development of several devices. I have rich experience in the software requirements analysis, summary, and detailed design.</p>
 
 <h2 id="contact">Contact</h2>
 
