--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="description" content="Hailong's homepage">
 
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="canonical" href="http://hailongding.github.io/">
-    <link rel="alternate" type="application/rss+xml" title="Hailong Ding" href="http://hailongding.github.io/feed.xml" />
+    <link rel="canonical" href="http://localhost:4000/">
+    <link rel="alternate" type="application/rss+xml" title="Hailong Ding" href="http://localhost:4000/feed.xml" />
 
     <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 </head>
@@ -61,15 +61,16 @@
     </a>
 </div>
 
-<p>I am a software engineer with 12 years of working experience, of which 9 years engaged in embedded software development. I graduated from Southeast University with a Master’s degree of Computer Science in 2007. Since then, I have been working for two subordinate enterprises in the same group company. The latter is a start-up company.</p>
+<p>I am a software engineer with 12 years of working experience, of which 9 years engaged in embedded software development. I graduated from Southeast Universtiy with a Master’s degree of Computer Scicence in 2007. Since then, I have been working for two subordinate enterprises in the same group campany. The latter is a start-up company.</p>
 
-<p>I am familiar with many aspects of embedded system development, including boot loader, Linux kernel, device driver, file system, embedded database, network communication, and performance optimization. I also have experience with cross-platform programming. I was responsible for the software development of several devices. I have rich experience in the software requirements analysis, summary, and detailed design.</p>
+<p>I am familiar with many aspects of embedded system development, including boot load, Linux kernel, device driver, file system, embedded database, network communication, and performance optimization.
+I also have experience with cross-platform programming. I was responsible for the software development of several devices. I have rich experience in the software requirements analysis, summary, and detailed design.</p>
 
 <h2 id="contact">Contact</h2>
 
 <p>Hailong Ding<br /></p>
 
-<p>Email: <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#105;&#110;&#103;&#104;&#097;&#105;&#108;&#111;&#110;&#103;&#064;&#102;&#097;&#115;&#116;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#100;&#105;&#110;&#103;&#104;&#097;&#105;&#108;&#111;&#110;&#103;&#064;&#102;&#097;&#115;&#116;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a></p>
+<p>Email: <a href="mailto:dinghailong@gmail.com">dinghailong@gmail.com</a></p>
 
 
 </div>
