--- a/research/index.html
+++ b/research/index.html
@@ -10,8 +10,8 @@
     <meta name="description" content="Hailong's homepage">
 
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="canonical" href="http://hailongding.github.io/research/">
-    <link rel="alternate" type="application/rss+xml" title="Hailong Ding" href="http://hailongding.github.io/feed.xml" />
+    <link rel="canonical" href="http://localhost:4000/research/">
+    <link rel="alternate" type="application/rss+xml" title="Hailong Ding" href="http://localhost:4000/feed.xml" />
 
     <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 </head>
